Starting to work

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -6,5 +6,5 @@
   <p>
     Fetching <b>{{ feedUrl }}</b>
   </p>
-  <ng-medium-feed [feedUrl]="feedUrl"></ng-medium-feed>
+  <ng-medium-feed [feedUrl]="feedUrl" [styles]="feedStyle"></ng-medium-feed>
 </div>
